--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
       "^@app/strategy(|/.*)$": "<rootDir>/libs/strategy/src/$1",
       "^@aws/(.*)$": "<rootDir>/shared/lib/aws/src/$1",
       "^@libs/(.*)$": "<rootDir>/libs/$1",
+      "^@shared/(.*)$": "<rootDir>/shared/$1",
       "/^@fixture\/(.*)$/": "<rootDir>/tests/fixtures/$1"
     }
   }
