test:add test to user module

--- a/package.json
+++ b/package.json
@@ -115,7 +115,8 @@
       "^@aws/(.*)$": "<rootDir>/shared/lib/aws/src/$1",
       "^@libs/(.*)$": "<rootDir>/libs/$1",
       "^@shared/(.*)$": "<rootDir>/shared/$1",
-      "^@tests/(.*)$": "<rootDir>/tests/$1"
+      "^@tests/(.*)$": "<rootDir>/tests/$1",
+      "^@apps/(.*)$": "<rootDir>/apps/$1"
     }
   }
 }
